<resources>
    <string name="app_name">IRememeber</string>
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUpLink">Sign Up For A New Account</string>
    <string name="next">Next</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="home_number">Home Number</string>
    <string name="item_image_contentDescription">Country flag</string>
    <string name="item_preview_country">Palestine (‫فلسطين)</string>
    <string name="item_preview_dialCode">+972</string>
    <string name="birthdate">Birthdate ex: YYYY/MM/dd</string>
    <string name="gender">Gender</string>
    <string name="password_confirm">Password Confirmation</string>
    <string name="home_address">Home Address</string>
    <string name="country_address">Country Address</string>
    <string name="city_address">City Address</string>
    <string name="get_myhome_address">Get My Home Address</string>
    <string name="firstname_is_required">First Name is Required</string>
    <string name="lastname_is_required">Last Name is Required</string>
    <string name="invalid_home_number">Invalid Number ex: +206630402 </string>
    <string name="birthdate_error">You Must Pick A Birthdate</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must be from 6 - 20 Characters</string>
    <string name="passwords_not_matched">Passwords are not matched</string>
    <string name="register">Register</string>
    <string name="gps_not_available">Error: GPS service is not available</string>
    <string name="login_failed">Login Failed</string>
    <string name="no_internt_msg">There is no internet connection</string>
    <string name="email_already_exist">Email already exist</string>
    <string name="location_required">Your location is required</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="type">
        <item>Patient</item>
        <item>Relative</item>
    </string-array>

    <!--    add patient code  -->

    <string name="no_result">No results where found</string>
    <string name="wait">Waiting..</string>
    <string name="title_activity_main2">Add patient</string>
    <string name="title_activity_main3">requests</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="wife">wife</string>
    <string name="Aunt_father_side">Aunt (father side)</string>
    <string name="Aunt_Mother_side">Aunt (Mother side)</string>
    <string name="Brother">Brother</string>
    <string name="Brother_in_law">Brother-in-law</string>
    <string name="Cousin_female_Mother_side">Cousin (female) - (Mother side)</string>
    <string name="Cousin_female_Father_side">Cousin (female)- (Father side)</string>
    <string name="Cousin_male_Father_side">Cousin (male) -(Father side)</string>
    <string name="Cousin_male_Mother_side">Cousin (male) -(Mother side)</string>
    <string name="Daughter">Daughter</string>
    <string name="Daughter_in_law">Daughter-in-law</string>
    <string name="Father_in_law">Father-in-law</string>
    <string name="Grandchildren">Grandchildren</string>
    <string name="Granddaughter">Granddaughter</string>
    <string name="Grandfather">Grandfather</string>
    <string name="Grandmother">Grandmother</string>
    <string name="Grandson">Grandson</string>
    <string name="Father">Father</string>
    <string name="Half_brother">Half-brother</string>
    <string name="Husband">Husband</string>
    <string name="Half_sister">Half-sister</string>
    <string name="Mother">Mother</string>
    <string name="Mother_in_law">Mother-in-law</string>
    <string name="Nephew_brother_son">Nephew (brother\'s son)</string>
    <string name="Nephew_sister_son">Nephew (sister\'s son)</string>
    <string name="Niece_brother_daughter">Niece (brother\'s daughter)</string>
    <string name="Niece_sister_daughter">Niece (sister\'s daughter)</string>
    <string name="Sister">Sister</string>
    <string name="Siter_in_law">Siter-in-law</string>
    <string name="Son">Son</string>
    <string name="Son_in_law">Son-in-law</string>
    <string name="Stepbrother">Stepbrother</string>
    <string name="Stepdaughter">Stepdaughter</string>
    <string name="Stepfather">Stepfather</string>
    <string name="Stepmother">Stepmother</string>
    <string name="Stepsister">Stepsister</string>
    <string name="Stepson">Stepson</string>
    <string name="Uncle_Father_side">Uncle (Father side)</string>
    <string name="Uncle_Mother_side">Uncle (Mother side)</string>
    <string name="hintPatientEmail">Patient Email</string>
    <string name="search">Search</string>
    <string name="thumbnail">thumbnail</string>
    <string name="patientEmail">Email</string>
    <string name="relation">Relations</string>
    <string name="send">Send</string>
    <string name="requestSend">request has been sent</string>

    <!-- patient home array-->
    <string-array name="patient_home_arr">
        <item>Profile</item>
        <item>Requests</item>
        <item>Relatives</item>
        <item>Home</item>
        <item>Memories</item>
        <item>Settings</item>
        <item>Panic</item>
    </string-array>

    <!-- patient home array-->
    <string-array name="relative_home_arr">
        <item>Profile</item>
        <item>Find Patients</item>
        <item>Patients</item>
    </string-array>
    <!-- patient list -->
    <string name="Memory">Matual Memories</string>
    <string name="Location">Location</string>
    <string name="RemovedSuccessfully">Removed Successfully</string>
    <string name="FailedRemoved">Failed to remove this patient</string>
    <string name="NoConnection">No Connection</string>
    <string name="request_location">Requesting Location</string>
    <string name="an_error_occurred">An error has occurred.. Check your connection</string>
    <!--Delete patient Dialog-->
    <string name="deleteMessage">Are you sure,You want to delete this patient?</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="register_failed">Register Failed</string>
    <string name="getting_location">Getting Location</string>
    <string name="please_wait">Please Wait ..</string>
    <string name="registering">Registering</string>

    <!-- Relative activity array-->
    <string-array name="relative_activity_arr">
        <item>Call</item>
        <item>SMS</item>
        <item>Memories</item>
        <item>Panic</item>
    </string-array>





    <!-- profile relative activity -->
    <string name="yourphone">Your phone</string>
    <string name="yourName">Your Name</string>
    <string name="yourcountry">yourcountry</string>
    <string name="yourcity">yourcity</string>
    <string name="youraddress">youraddress</string>
    <string name="title_activity_patient_profile">PatientProfileActivity</string>

    <!--receive open gps request-->
    <string name="wants_to_know"> wants to know your location.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_diconnected">Patient has disconnected</string>


    <!-- home activity -->
    <string name="title_activity_maps">Map</string>
    <string name="maplLabel">Home</string>

    <!-- Patient activity array-->
    <string-array name="patient_activity_arr">
        <item>Location</item>
        <item>Matual Memories</item>
    </string-array>

    <!--memory-->
    <string name="memoryHint"> write your memory here</string>
    <string name="memory">Memory</string>
    <string name="location">location</string>
    <string name="camera">photo</string>
    <string name="with"> with </string>

    <string name="NoMemories">There are not memories</string>
    <string name="NoMutualMemories">There are not mutual memories</string>
    <string name="deleteMemory">Memory is deleted successfully</string>
    <string name="saveMemory">Memory is save successfully</string>
    <string name="editMemory">Memory is edited successfully</string>
    <string name="deleteMemoryDialog">Are You sure you want to delete this memory?</string>
    <string name="failedMessage">Failed</string>
    <string name="titleDeleteMemoryDialog">Delete Memory</string>
    <string name="postMemory">Your memory is posted successfully</string>
    <string name="imageUploaded">Image is uploaded successfully</string>
    <string name="maxChar">Maximum size of charachters are 400</string>
    <string name="nullText">You must write memory</string>

</resources>
