<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sendRequestActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SendRequest">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <!--<TextView-->
        <!--android:layout_width="350dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:text="@string/patientEmail"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp"-->
        <!--android:textSize="25dp"/>-->



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patientEmail"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:drawableRight="@drawable/search"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/hintPatientEmail"
        android:textColor="@color/textColor"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listPatient"
        android:visibility="invisible"
        android:background="@color/colorAccent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="180dp">
    </ListView>

    <TextView
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:text="@string/relation"
        android:id="@+id/relationTextView"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="25dp"
        android:visibility="gone"/>

<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="300dp"
    android:id="@+id/spinnerRelation"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:visibility="gone"
    ></Spinner>


<Button
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text="@string/send"
    android:textSize="20dp"
    android:background="@color/colorPrimary"
    android:textColor="@color/colorButtonText"
    android:layout_marginTop="380dp"
    android:layout_marginLeft="250dp"
    android:layout_gravity="right"
    android:id="@+id/done"
    android:textStyle="italic"
    android:visibility="gone"
    />


</RelativeLayout>
